--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name="viewport" content="width=devise-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         <!-- JavaScript Bundle with Popper -->
 
-        <link href="static/css/style.css" rel="stylesheet">
+        <link href="/static/css/style.css" rel="stylesheet" type="text/css">
     </head>
     <!-- navbar -->
     {{ template "content" . }}
