--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,14 @@
             <div class="row">
                 <div class="col-md-3">
                     <a class="btn btn-primary btn-lg">Create new workout</a>
+                    <br>
+                    <h3>List of Lifts</h3>
+                    <ul>
+                    {{ range .lifts }} 
+                        <li>{{ .Name }}</li>
+                    {{ end }} 
+                    </ul>
+                        
                 </div>
                 <div class="col-md-9 col-sm">
                     <h3 class="workout-heading">This week's workouts {{ .startDay | fdate}} - {{ .endDay | fdate }}</h3>
